--- a/Unet_test.ipynb
+++ b/Unet_test.ipynb
@@ -72,7 +72,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "53ca54fc-0d4c-4b36-eb1e-df48ff53056e"
+        "outputId": "0d824544-6685-4a92-8549-45990b8cd791"
       },
       "source": [
         "from google.colab import drive\n",
@@ -83,7 +83,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -123,7 +123,7 @@
         "      l2_1_0.append(i)\n",
         "  return {'label_0':l0, 'label_1_0':l1_0,'label_2_0': l2_0, 'label_2_1_0': l2_1_0}"
       ],
-      "execution_count": 3,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
         "    return_object = {'bbox_bool': box} if mask.dtype ==bool else {'bbox_label': dict(zip([f\"label{int(i)}\" for i in obj_ids[1:]],box)), 'bbox_bool' : box_bool}\n",
         "    return return_object"
       ],
-      "execution_count": 4,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
         "            crop_im = im[ y_min - ky - sy : y_max + ky + 1, x_min - kx - sx : x_max + kx  + 1]\n",
         "            return crop_im, crop, \n"
       ],
-      "execution_count": 5,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1585,7 +1585,7 @@
         "segment_numpy = np.float32(segment_numpy)\n",
         "segment_numpy = np.expand_dims(segment_numpy,3)\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1596,7 +1596,7 @@
       "source": [
         "IMG_HEIGHT, IMG_WIDTH, IMG_CHANNELS  =crop_size, crop_size, 1"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1628,7 +1628,7 @@
         "    return out\n",
         "        "
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1641,7 +1641,7 @@
         "drop = None\n",
         "l2 = True"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1725,22 +1725,22 @@
         "model = tf.keras.Model(inputs=[inputs], outputs=[outputs])\n",
         "    \n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "8sXw6nStbhMm",
-        "outputId": "a3dc7311-0981-400c-b952-6e699d6d13c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a3dc7311-0981-400c-b952-6e699d6d13c1"
       },
       "source": [
         "model.summary()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1845,7 +1845,7 @@
         "  return 1.- des\n",
         "\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1869,7 +1869,7 @@
         "  return des\n",
         "\n"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1880,7 +1880,7 @@
       "source": [
         "optimizer = tf.keras.optimizers.Adam()\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1903,7 +1903,7 @@
         "model.compile(optimizer=optimizer, loss=Dice , metrics=[Dice1])\n",
         "                 "
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1921,7 +1921,7 @@
         "    return lr * 0.1\n",
         "\n"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1932,7 +1932,7 @@
       "source": [
         "callback = tf.keras.callbacks.LearningRateScheduler(scheduler)\n"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2076,7 +2076,183 @@
         "segment_numpy = np.float32(segment_numpy)\n",
         "segment_numpy = np.expand_dims(segment_numpy,3)\n"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K6I9wepbLtva"
+      },
+      "source": [
+        "class DataGenerator(tf.keras.utils.Sequence):\n",
+        "  def __init__(self):\n",
+        "\n",
+        "    self.image = [os.path.join('/content/drive/MyDrive/qazal/slice',i) for i in os.listdir('/content/drive/MyDrive/qazal/slice')]\n",
+        "    self.seg = [os.path.join('/content/drive/MyDrive/qazal/slice_seg',i) for i in os.listdir('/content/drive/MyDrive/qazal/slice_seg')]\n",
+        "\n",
+        "  def __len__(self):\n",
+        "    'Get the number of batches per epoch'\n",
+        "\n",
+        "    return len(self.image)\n",
+        "\n",
+        "  def __getitem__(self, index):\n",
+        "    im = nib.load(self.image[index]).get_fdata()  \n",
+        "\n",
+        "    Masks = nib.load(self.seg[index]).get_fdata() \n",
+        "    if len(np.unique(Masks)) >1:\n",
+        "\n",
+        "      k=make_box(Masks[:,:].astype(np.bool))\n",
+        "      crop_im , crop = crop_specific(im[:,:], Masks[:,:], crop_size= 192)\n",
+        "      return crop_im, crop\n",
+        "\n",
+        "       \n",
+        "\n",
+        "    \n",
+        "\n",
+        " "
+      ],
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jfuP_edzOULh"
+      },
+      "source": [
+        "dat = DataGenerator()"
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f4YSL7FiOUYU",
+        "outputId": "e636882f-5499-4449-9f61-5c9f65c3b5a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "dat"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<__main__.DataGenerator at 0x7f2ecef91650>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Eo0qeyPkMZkc",
+        "outputId": "d15d2940-4ddb-442f-894a-a4b86f72f3ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        }
+      },
+      "source": [
+        "for i in os.walk('/content/drive/MyDrive/qazal/slice'):\n",
+        "  print(i)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-ca1f45f485c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwalk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/drive/MyDrive/qazal/slice'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cSeM4g6SMwti"
+      },
+      "source": [
+        "im=[os.path.join('/content/drive/MyDrive/qazal/slice',i) for i in os.listdir('/content/drive/MyDrive/qazal/slice')]"
+      ],
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QnEN9S2nNGlM"
+      },
+      "source": [
+        "seg =  [os.path.join('/content/drive/MyDrive/qazal/slice_seg',i) for i in os.listdir('/content/drive/MyDrive/qazal/slice_seg')]\n"
+      ],
       "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DZVeOmtrNGnS"
+      },
+      "source": [
+        "Masks = nib.load(seg[0]).get_fdata()     "
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ihYv024CNGp9",
+        "outputId": "704f40ab-6918-4aa2-faac-ec91a18bb24d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 163
+        }
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-8e48541769dc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mMasks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'Masks' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PSHRtI5gkruP"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2171,17 +2347,17 @@
         "    model.summary()\n",
         "    return model"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "VmFZDtyMii53",
-        "outputId": "baa90ccb-466d-46e8-a05d-bea72961481e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "baa90ccb-466d-46e8-a05d-bea72961481e"
       },
       "source": [
         "def Dice(y_true, y_pred):\n",
@@ -2200,7 +2376,7 @@
         "\n",
         "model = U_Net_Segmentation()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2307,6 +2483,46 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ZnTHmeqPHEO6"
+      },
+      "source": [
+        "def dice_coef(y_true, y_pred):\n",
+        "    y_truef=K.flatten(y_true)\n",
+        "    y_predf=K.flatten(y_pred)\n",
+        "    And=K.sum(y_truef* y_predf)\n",
+        "    return((2* And + smooth) / (K.sum(y_truef) + K.sum(y_predf) + smooth))\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CybMWXP7G9PC"
+      },
+      "source": [
+        "\n",
+        "def dice_coef_loss(y_true, y_pred):\n",
+        "    return -dice_coef(y_true, y_pred)\n",
+        "\n",
+        "def iou(y_true, y_pred):\n",
+        "    intersection = K.sum(y_true * y_pred)\n",
+        "    sum_ = K.sum(y_true + y_pred)\n",
+        "    jac = (intersection + smooth) / (sum_ - intersection + smooth)\n",
+        "    return jac\n",
+        "\n",
+        "def jac_distance(y_true, y_pred):\n",
+        "    y_truef=K.flatten(y_true)\n",
+        "    y_predf=K.flatten(y_pred)\n",
+        "\n",
+        "    return - iou(y_true, y_pred)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "ZVuZXMVVmzzd"
       },
       "source": [
@@ -2316,7 +2532,7 @@
         "\n",
         "  return 1 - numerator/ denominator"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2328,7 +2544,7 @@
         "#loss = \"sparse_categorical_crossentropy\"\n",
         "loss = dice_loss"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2339,7 +2555,7 @@
       "source": [
         "optimizer = tf.keras.optimizers.Adam()\n"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2351,7 +2567,7 @@
         "model.compile(optimizer=optimizer, loss=loss, metrics=[Dice])\n",
         "                 "
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2377,7 +2593,7 @@
       "source": [
         "image_numpy = np.squeeze(image_numpy)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2388,7 +2604,7 @@
       "source": [
         "segment_numpy = np.squeeze(segment_numpy)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
